# QNN

./: CorrelationVsVector.py  README.md  circle_classification.py  classic_models.py  cross_val.py  data_analysis.py  data_process.py  feature_process.py  main.py  models.py  pyproject.toml  row_data.csv  wind_regression.py
